--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-
+  <div class="wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('https://pngtree.com/free-backgrounds-photos/science');
+        background-size: cover; background-position: center;">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
@@ -44,6 +45,7 @@
         <div id="bubble"></div>
       </div>
     </div>
+  </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
