Updating HTML code.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body>
-  <div class="wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('https://pngtree.com/free-backgrounds-photos/science');
-        background-size: cover; background-position: center;">
+      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('../Belly-Button-Biodiversity/science\ backgroung.jpg');
+        background-size: cover; background-position: center; color: whitesmoke;">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
