--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('../Belly-Button-Biodiversity/science\ backgroung.jpg');
-        background-size: cover; background-position: center; color: whitesmoke;">
+      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('../Belly-Button-Biodiversity/science\ background.jpg');
+        background-size: cover; background-position: center; color: rgb(0, 0, 0);">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
