--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url('../Belly-Button-Biodiversity/science\ background.jpg');
-        background-size: cover; background-position: center; color: rgb(0, 0, 0);">
+      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center jumbo-image" cover; background-position: center; color: rgb(0, 0, 0);>
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
