--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center jumbo-image" cover; background-position: center; color: rgb(0, 0, 0);>
+      <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center jumbo-image";>
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
